--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ rand = "0.9.1"
 rusqlite = "0.35.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.45.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
